--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,52 @@ nav a:hover {
     color: #851515;
 }
 
+/* Slider */
+
+.slider-main {
+    margin-left: 50px;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+}
+
+.slider-container {
+    height: 100%;
+    width: 500%;
+    display: flex;
+}
+
+.each-slide {
+    height: 100%;
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.each-slide > img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+@keyframes sliding {
+    0% {margin-right: 0;}
+    20% { margin-right: 0;}
+    25% { margin-right: -20%; }
+    45% { margin-right: -20%; }
+    50% { margin-right: -40%; }
+    70% { margin-right: -40%; }
+    75% { margin-right: -60%; }
+    95% { margin-right: -60%; }
+    100% { margin-right: -80%; }
+}
+
+.standard-slide {
+    animation: sliding 20s infinite ease-in-out;
+}
+
 /* Carousel styles */
 #carousel-slides {
     display: flex;
